; ModuleID = '/home/carl/AnghaBench/rufus/src/extr_dos_locale.c_ms_get_ega.c'
source_filename = "/home/carl/AnghaBench/rufus/src/extr_dos_locale.c_ms_get_ega.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"ega.cpi\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"ega2.cpi\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"ega3.cpi\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @ms_get_ega to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ms_get_ega(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %8 [
    i32 437, label %5
    i32 850, label %5
    i32 852, label %5
    i32 860, label %5
    i32 863, label %5
    i32 865, label %5
    i32 857, label %6
    i32 861, label %6
    i32 869, label %6
    i32 737, label %6
    i32 775, label %7
    i32 855, label %7
    i32 866, label %7
  ]

5:                                                ; preds = %1, %1, %1, %1, %1, %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %9

6:                                                ; preds = %1, %1, %1, %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %9

7:                                                ; preds = %1, %1, %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %9

8:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %9

9:                                                ; preds = %8, %7, %6, %5
  %10 = load i8*, i8** %2, align 8
  ret i8* %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
